--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
 edition = "2018"
 
 [dependencies]
+generational-arena = "0.2.8"
 
 [dev-dependencies]
 kiss3d = "0.28.0"
